Add product live search
